--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<a href="study/js/"><span>JS</span></a>
 			<ul class="list2">
 			<li class="depth2"><a target="_blank" href="study/js/prototype.md"><span>Prototype이란?</span></a></li>
+			<li class="depth2"><a target="_blank" href="study/js/js_study/"><span>js study index</span></a></li>
 			</ul>
 		</li>
 
