프로젝트 추가

--- a/project/project.html
+++ b/project/project.html
@@ -76,6 +76,28 @@
 			<p class="browser">IE9+, iOS7+, AOS4.1.2+</p>
 		</div>
 	</li>
+	<li class="project_wrap">
+		<a href="#" class="project_img">
+			<img src="../project/img/p_payco.jpg" alt="">
+		</a>
+		<div class="project_info">
+			<h2 class="tit">eBay 웹접근성 가이드 제작</h2>
+			<p class="period">2017.07.03~2017.07.28</p>
+			<p class="support">가이드 제작</p>
+		</div>
+	</li>
+	<li class="project_wrap">
+		<a href="#" class="project_img">
+			<img src="../project/img/p_bluehole.jpg" alt="">
+		</a>
+		<div class="project_info">
+			<h2 class="tit">블루홀 A:IR</h2>
+			<p class="period">2017.08.01~2017.12.12</p>
+			<p class="support">PC/M 신규구축</p>
+			<p class="work_area">마크업, jquery</p>
+			<p class="browser">IE9+, iOS8+, AOS4+</p>
+		</div>
+	</li>
 	</ul>
 </div>
 </body>
