플러그인 커밋

--- a/plugin/iscroll/example/index.html
+++ b/plugin/iscroll/example/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
 <title>iScroll 예시</title>
-<link rel="stylesheet" type="text/css" href="css/terms.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 <div class="tab_wrap">
 	<div class="inner">
