플러그인 커밋

--- a/study/js/bluehole_worldmap_prototype/prototype/map.html
+++ b/study/js/bluehole_worldmap_prototype/prototype/map.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Map</title>
-<script type="text/javascript" src="js_top.js"></script>
+<link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 <body>
 <!-- [D] WRAP -->
@@ -119,6 +119,8 @@
 	</div>
 </div>
 <!-- //[D] WRAP -->
-<script type="text/javascript" src="js_bottom.js"></script>
+<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/ui.js"></script>
 </body>
 </html>
