인덱스 수정, 불필요 파일 삭제

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 		<li class="depth">
 			<a href="study/gulp/"><span>Gulp</span></a>
 			<ul class="list2">
-			<li class="depth3"><a href="lesson/lesson.html"><span>lesson : 자바스크립트, jquery</span></a></li>
+			<li class="depth2"><a href="iis_setting/index.md"><span>iis_setting</span></a></li>
 			</ul>
 		</li>
 		<li class="depth">
 			<a href="study/js/"><span>JS</span></a>
 			<ul class="list2">
 			<li class="depth2"><a target="_blank" href="study/js/prototype.md"><span>Prototype이란?</span></a></li>
-			<li class="depth2"><a target="_blank" href="study/js/js_study/"><span>js study index</span></a></li>
+			<li class="depth2"><a target="_blank" href="study/js/hivelab/"><span>Hivelab jQuery Study</span></a></li>
+			<li class="depth2"><a target="_blank" href="study/js/plugin/"><span>Plugin</span></a></li>
+			<li class="depth2"><a target="_blank" href="study/js/double_outside/"><span>Double_outside</span></a></li>
 			</ul>
 		</li>
 
