--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<li class="depth2"><a target="_blank" href="js/prototype.md"><span>Prototype?</span></a></li>
 			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/plugin"><span>Plugin</span></a></li>
 			<li class="depth2"><a target="_blank" href="js/double_outside/"><span>Double_outside</span></a></li>
-			<li class="depth2"><a target="_blank" href="js/video/index.md"><span>Video/Audio Conrol</span></a></li>
-			<li class="depth2"><a target="_blank" href="js/image/index.md"><span>Image Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/video/index.md"><span>Video/Audio Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/image/index.md"><span>Image Conrol</span></a></li>
 			</ul>
 		</li>
 
