--- a/index_.html
+++ b/index_.html
@@ -35,9 +35,10 @@
 			<a href="study/js/"><span>JS</span></a>
 			<ul class="list2">
 			<li class="depth2"><a target="_blank" href="https://vlueviolet.github.io/study/"><span>Hivelab jQuery Study</span></a></li>
-			<li class="depth2"><a target="_blank" href="js/prototype.md"><span>Prototype?</span></a></li>
+			<li class="depth2"><a href="js/prototype.md"><span>Prototype?</span></a></li>
 			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/plugin"><span>Plugin</span></a></li>
 			<li class="depth2"><a target="_blank" href="js/double_outside/"><span>Double_outside</span></a></li>
+			<li class="depth2"><a href="js/uio"><span>UIO</span></a></li>
 			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/video/index.md"><span>Video/Audio Conrol</span></a></li>
 			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/image/index.md"><span>Image Conrol</span></a></li>
 			</ul>
