--- a/js/uio/accordion/simple/index.html
+++ b/js/uio/accordion/simple/index.html
@@ -6,51 +6,51 @@
 <meta name="format-detection" content="telephone=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="robots" content="all">
-<title>accordion simple</title>
+<title>accordion slide down</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="wrap">
-    <div class="schedule_area">
-        <ul class="list_schedule">
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">1번</span>
+    <div class="list_area">
+        <ul class="list">
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">1번</span>
                 <span class="date">2018. 03. 01 - 2018. 03. 07</span>
             </a>
             <div class="details">내용<br>내용<br>내용</div>
         </li>
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">2번</span>
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">2번</span>
                 <span class="date">2018. 03. 08 - 2018. 03. 14</span>
             </a>
             <div class="details">내용<br>내용<br>내용<br>내용<br>내용<br>내용</div>
         </li>
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">3번</span>
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">3번</span>
                 <span class="date">2018. 03. 15 - 2018. 03. 21</span>
             </a>
             <div class="details">내용<br>내용<br>내용<br>내용<br>내용<br>내용</div>
         </li>
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">4번</span>
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">4번</span>
                 <span class="date">2018. 03. 22 - 2018. 03. 28</span>
             </a>
             <div class="details">내용<br>내용<br>내용<br>내용<br>내용<br>내용</div>
         </li>
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">5번</span>
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">5번</span>
                 <span class="date">2018. 03. 29 - 2018. 04. 04</span>
             </a>
             <div class="details">내용<br>내용<br>내용<br>내용<br>내용<br>내용</div>
         </li>
-        <li class="week_item">
-            <a href="#" class="summary">
-                <span class="day">6번</span>
+        <li class="list_item">
+            <a href="#" class="list_cont">
+                <span class="txt">6번</span>
                 <span class="date">2018. 04. 05 - 2018. 04. 11</span>
             </a>
             <div class="details">내용<br>내용<br>내용<br>내용<br>내용<br>내용</div>
