--- a/js/uio/accordion/simple/index.html
+++ b/js/uio/accordion/simple/index.html
@@ -58,7 +58,7 @@
         </ul>
     </div>
 </div>
-<script src="js/libs/jquery-1.12.4.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src="js/apps/ui.js"></script>
 </body>
 </html>
