--- a/js/uio/hamburger/index.html
+++ b/js/uio/hamburger/index.html
@@ -41,7 +41,7 @@
         <br><br><br><br><br><br><br>
     </main>
 </div>
-<script src="js/libs/jquery-1.12.4.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src="js/libs/vendor.js"></script>
 <script src="js/apps/ui.js"></script>
 </body>
