--- a/js/uio/index.html
+++ b/js/uio/index.html
@@ -1,48 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-<meta name="format-detection" content="telephone=no">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="robots" content="all">
-<title>hamburger menu</title>
-<link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Index</title>
 </head>
 <body>
-<div id="wrap">
-    <header id="header">
-        <button type="button" class="btn_menu">menu</button>
-        <div id="nav">
-            <div class="nav_box">
-                <div class="inner">
-                    <ul class="list">
-                    <li><a href="#">메뉴 1</a></li>
-                    <li><a href="#">메뉴 2</a></li>
-                    <li><a href="#">메뉴 3</a></li>
-                    <li><a href="#">메뉴 4</a></li>
-                    <li><a href="#">메뉴 5</a></li>
-                    <li><a href="#">메뉴 6</a></li>
-                    <li><a href="#">메뉴 7</a></li>
-                    <li><a href="#">메뉴 8</a></li>
-                    <li><a href="#">메뉴 9</a></li>
-                    <li><a href="#">메뉴 10</a></li>
-                    <li><a href="#">메뉴 11</a></li>
-                    <li><a href="#">메뉴 12</a></li>
-                    <li><a href="#">메뉴 13</a></li>
-                    <li><a href="#">메뉴 14</a></li>
-                    </ul>
-                </div>
-                <button type="button" class="btn_close">close</button>
-            </div>
-        </div>
-    </header>
-    <main id="content">
-        <br><br><br><br><br><br><br>
-    </main>
-</div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<script src="js/libs/vendor.js"></script>
-<script src="js/apps/ui.js"></script>
+    <h1>UIO Index</h1>
+    <ul>
+    <li><a href="accordion/simple/index.html">아코디언 &gt; 심플</a></li>
+    <li><a href="accordion/slide_down/index.html">아코디언 &gt; 슬라이드다운</a></li>
+    <li><a href="hamburger/index.html">햄버거 메뉴</a></li>
+    <li><a href="layer_simple/index.html">레이어 팝업</a></li>
+    <li><a href="nav_scroll/index.html">네비게이션 스크롤</a></li>
+    <li><a href="select_box/index.html">셀렉트박스</a></li>
+    <li><a href="top_button/index.html">top버튼</a></li>
+    <li><a href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/js/uio">소스보기</a></li>
+    </ul>
 </body>
 </html>
