--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		<li class="depth">
 			<a href="works/study/gulp/"><span>작업환경 셋팅</span></a>
 			<ul class="list2">
-			<li class="depth2"><a href="works/gulp/index.md"><span>iis_setting</span></a></li>
+			<li class="depth2"><a href="works/gulp"><span>iis_setting</span></a></li>
 			</ul>
 		</li>
 		<li class="depth">
 			<a href="works/study/gulp/"><span>Gulp</span></a>
 			<ul class="list2">
-			<li class="depth2"><a href="works/iis_setting/index.md"><span>Gulp 기초</span></a></li>
+			<li class="depth2"><a href="works/iis_setting"><span>Gulp 기초</span></a></li>
 			</ul>
 		</li>
 		<li class="depth">
@@ -38,8 +38,8 @@
 			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/plugin"><span>Plugin</span></a></li>
 			<li class="depth2"><a target="_blank" href="js/double_outside/"><span>Double_outside</span></a></li>
 			<li class="depth2"><a href="works/js/uio"><span>UIO</span></a></li>
-			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/video/index.md"><span>Video/Audio Conrol</span></a></li>
-			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/image/index.md"><span>Image Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/video"><span>Video/Audio Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/image"><span>Image Conrol</span></a></li>
 			</ul>
 		</li>
 
