--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 		<li class="depth">
 			<a href="works/study/js/"><span>JS</span></a>
 			<ul class="list2">
-			<li class="depth2"><a target="_blank" href="https://vlueviolet.github.io/study/"><span>Hivelab jQuery Study</span></a></li>
+			<li class="depth2"><a target="_blank" href="/study/"><span>Hivelab jQuery Study</span></a></li>
 			<li class="depth2"><a href="works/js/prototype.md"><span>Prototype?</span></a></li>
-			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/plugin"><span>Plugin</span></a></li>
-			<li class="depth2"><a target="_blank" href="js/double_outside/"><span>Double_outside</span></a></li>
+			<li class="depth2"><a target="_blank" href="works/js/plugin"><span>Plugin</span></a></li>
+			<li class="depth2"><a target="_blank" href="works/js/double_outside/"><span>Double_outside</span></a></li>
 			<li class="depth2"><a href="works/js/uio"><span>UIO</span></a></li>
-			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/video"><span>Video/Audio Conrol</span></a></li>
-			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/blob/master/js/image"><span>Image Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="works/js/video"><span>Video/Audio Conrol</span></a></li>
+			<li class="depth2"><a target="_blank" href="works/js/image"><span>Image Conrol</span></a></li>
 			</ul>
 		</li>
 
