--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<ul class="list2">
 			<li class="depth2"><a target="_blank" href="/study/"><span>Hivelab jQuery Study</span></a></li>
 			<li class="depth2"><a href="works/js/prototype.md"><span>Prototype?</span></a></li>
-			<li class="depth2"><a target="_blank" href="works/js/plugin"><span>Plugin</span></a></li>
+			<li class="depth2"><a target="_blank" href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/works/plugin"><span>Plugin</span></a></li>
 			<li class="depth2"><a target="_blank" href="works/js/double_outside/"><span>Double_outside</span></a></li>
 			<li class="depth2"><a href="works/js/uio"><span>UIO</span></a></li>
 			<li class="depth2"><a target="_blank" href="works/js/video"><span>Video/Audio Conrol</span></a></li>
