--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 			<li class="depth2"><a target="_blank" href="works/js/image"><span>Image Conrol</span></a></li>
 			</ul>
 		</li>
+		<li class="depth">
+			<a href="works/vuejs/readme.md"><span>JS</span></a>
+			<ul class="list2">
+			<li class="depth2"><a target="_blank" href="/works/vuejs/readme.md"><span>Vuex - Getters,  Mutations</span></a></li>
+			</ul>
+		</li>
 
 	</ul>
 </div>
