--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			</ul>
 		</li>
 		<li class="depth">
-			<a href="works/vuejs/readme.md"><span>JS</span></a>
+			<a href="https://github.com/vlueviolet/vlueviolet.github.io/tree/master/works/vuejs"><span>Vuejs</span></a>
 			<ul class="list2">
-			<li class="depth2"><a target="_blank" href="/works/vuejs/readme.md"><span>Vuex - Getters,  Mutations</span></a></li>
+			<li class="depth2"><a target="_blank" href="/https://github.com/vlueviolet/vlueviolet.github.io/tree/master/works/vuejs"><span>Vuex - Getters,  Mutations</span></a></li>
 			</ul>
 		</li>
 
