--- a/study/inflearn/react-webgame/number-baseball/index.html
+++ b/study/inflearn/react-webgame/number-baseball/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>구구단</title>
+    <title>끝말잇기</title>
   </head>
   <body>
     <div id="root"></div>
