--- a/study/canvas-transparent/index.html
+++ b/study/canvas-transparent/index.html
@@ -20,11 +20,11 @@
   </section>
   <section>
     <h2>canvas 투명도 적용<br>(g > 100 && r < 100 제거)</h1>
-      <canvas id="c2" width="150" height="300"></canvas>
+      <canvas id="transparent" width="150" height="300"></canvas>
   </section>
   <section>
     <h2>canvas 일반</h2>
-    <canvas id="c1" width="150" height="300"></canvas>
+    <canvas id="normal" width="150" height="300"></canvas>
   </section>
 
   <script src="./index.js"></script>
