--- a/study/canvas/canvas-transparent/index.html
+++ b/study/canvas/canvas-transparent/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
-  <title>Canvas 크로마키</title>
+  <title>Canvas 투명 적용</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
   <link rel="stylesheet" href="./style.css">
 </head>
